# promptgen

./: .env.example  .gitignore  README.md  app.py  pyproject.toml  requirements.txt
core/: __init__.py  prompt_engine.py
data/: __init__.py  prompt_database.py
integrations/: __init__.py  external_llm_integration.py  ollama_integration.py
utils/: __init__.py  history_manager.py  logger.py
