[project]
name = "prompt-generator-for-images"
version = "1.0.0"
description = "이미지 생성 AI를 위한 프롬프트 생성 도구"
requires-python = ">=3.10"
dependencies = [
    "streamlit>=1.28.0",
    "requests>=2.31.0",
    "deep-translator>=1.11.4",
    "openai>=1.0.0",
    "google-genai>=1.0.0",
    "anthropic>=0.18.0",
]
